DT-1893: 🐛 Fix info endpoint not working after java upgrade